test/testVar/var4.out
var4.rask:3:13: error: unknown identifier 'x'

