test/testVar/var4.rask
main() -> void
{
    var y = x;
    print(y);
}
